export enum NotificationType {
  CHANGE_OF_POSSESSED_GEMS = 'CHANGE_OF_POSSESSED_GEMS',
  DIAMOND_UPDATE = 'DIAMOND_UPDATE',
  RANKING_UPDATE = 'RANKING_UPDATE',
}
