/**
 * KickStream API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { User } from './user';


export interface Prediction { 
    user: User;
    userId: string;
    matchId: string;
    scoreFirstEquipe: number;
    scoreSecondEquipe: number;
    numberOfDiamondsBet: number;
    pointsEarned: number;
    id: string;
    createdAt: string;
    updatedAt: string;
    version: number;
}

