/**
 * KickStream API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { Prediction } from './prediction';
import { Notification } from './notification';


export interface User { 
    firstName: string;
    lastName: string;
    email: string;
    password: string;
    imageUrl: string;
    isEmailVerified: boolean;
    verificationToken: string | null;
    isMFAEnabled: boolean;
    mfaSecret: string | null;
    recoveryCodes: Array<string> | null;
    googleId: string;
    githubId: string;
    diamonds: number;
    score: number;
    refreshToken?: string;
    predictions: Array<Prediction>;
    notifications: Array<Notification>;
    id: string;
    createdAt: string;
    updatedAt: string;
    version: number;
}

